--- a/Table App B spawner covariates.Rmd
+++ b/Table App B spawner covariates.Rmd
@@ -539,7 +539,7 @@ seltable=seltable[1:(dim(seltable)[1]-1),]
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1), upwelling and ONI as the explanatory variables ($V_t$) for the catch during monsoon months (Jul-Sep) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. Two upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore (box 13) minus nearshore (box 4) SST, and the average nearshore SST along the Kerala coast (boxes 2-5). These are highly correlated but not identical. The ONI index is the average over all months in the calendar year. The 2.5-year average SST is the average for Jan-Jun in the current calendar year and the prior 2 calendar years. Thus the average does not include any months during the Jul-Sep catch (response variable).  See Table ", ref("tabappB:spawner-model-precip", pre="B"), " for an explanation of the models.")
+thecap=paste("Model selection tests of sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1), upwelling and ONI as the explanatory variables ($V_t$) for the catch during monsoon months (Jul-Sep) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. Two upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore (box 13) minus nearshore (box 4) SST, and the average nearshore SST along the Kerala coast (boxes 2-5). These are highly correlated but not identical. The ONI index is the average over all months in the calendar year. The 2.5-year average SST is the average for Jan-Jun in the current calendar year and the prior 2 calendar years (30 months total). Thus the average does not include any months during the Jul-Sep catch (response variable).  See Table ", ref("tabappB:spawner-model-precip", pre="B"), " for an explanation of the models.")
 fullcap=paste("Table ", ref("tabappB:spawner-model-upw", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
