--- a/Table App A nonspawner model.Rmd
+++ b/Table App A nonspawner model.Rmd
@@ -15,10 +15,15 @@ header-includes: \usepackage[labelformat=empty]{caption}
 dat=dat.nonspawners
 Yr1 = min(dat$Year)
 Yr2 = max(dat$Year)
+
+#naive model error
+#def of MASE is MAE/naive error
+NE=mean(abs(dat$nspawners0-dat$nspawners1))
 ```
 
 ```{r seltableA2a, echo=FALSE}
-respdat = fullrespdat[which(fullrespdat$Year==Yr1):which(fullrespdat$Year==Yr2),]
+#respdat = fullrespdat[which(fullrespdat$Year==Yr1):which(fullrespdat$Year==Yr2),]
+respdat = dat
 
 seltable = data.frame(
   Model=paste("Naive Model ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
@@ -37,7 +42,7 @@ m1 = lm(nspawners0 ~ -1 + offset(nspawners1), data=m5$model)
 i=1; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t)$ = $ln(N_{t-1})$ + $\\epsilon$", 
+  Model="$ln(N_t)$ = $ln(N_{t-1})$ + $\\epsilon_t$", 
   Residual.df=round(aa[["df"]][2],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2="", 
@@ -641,60 +646,4 @@ kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
 cat("\\clearpage")
 ```
 
-
-```{r seltableA2d, echo=FALSE, eval=FALSE}
-# Don't include models with current spawners as exp var
-respdat = fullrespdat[which(fullrespdat$Year==Yr1):which(fullrespdat$Year==Yr2),]
-
-#set up table
-seltable = data.frame(Model="Add current season spawning information", Residual.df="", Residual.dev="", AIC="", stringsAsFactors=FALSE)
-
-#5 is most complex
-m5 = gam(nspawners0 ~ spawners0+spawners1+nspawners1+nspawners2+spawners2, data=respdat)
-m0=m5
-m1 = gam(nspawners0 ~ spawners0, data=m0$model)
-m2 = gam(nspawners0 ~ s(spawners0, sp=0.6), data=m0$model)
-m3 = gam(nspawners0 ~ spawners0+s(spawners1, sp=0.6), data=m0$model)
-m4 = gam(nspawners0 ~ spawners0+s(nspawners1,sp=0.6), data=m0$model)
-#must be 1:n order! for code below to work
-a=anova(m1,m2,m3,m4, test="F")
-
-#linear ln S0
-i=1; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(
-  Model="$ln(N_t)$ = $\\alpha$ + $\\beta ln(S_t)$ + $\\epsilon_t$", 
-  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
-  Residual.dev=round(a[["Resid. Dev"]][i],digits=2),  
-  AIC=round(AIC(get(mod)), digits=2))
-seltable=rbind(seltable,tmp1)
-
-#non-linear S0
-i=2; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(N_t)$ = $\\alpha$ + $s(ln(S_{t}))$ + $\\epsilon_t$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2),  AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("\\kern 3em ($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "\\%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", AIC="")
-seltable=rbind(seltable,tmp1,tmp2)
-
-#linear S0 + non-linear ln S1
-i=3; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(N_t)$ = $\\alpha$ + $\\beta ln(S_t)$ + $s(ln(S_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2),  AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("\\kern 3em ($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "\\%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", AIC="")
-seltable=rbind(seltable,tmp1,tmp2)
-
-#linear S0 + non-linear ln NS1
-i=4; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(N_t)$ = $\\alpha$ + $\\beta ln(S_t)$ + $s(ln(N_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2),  AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("\\kern 3em ($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "\\%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", AIC="")
-seltable=rbind(seltable,tmp1,tmp2)
-
-colnames(seltable)=c("Model", "Residual df", "Residual deviance", "AIC")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "\\shortstack{Residual\\\\deviance}",  "AIC")
-
-thecap=paste("Model selection tests for the $N_t$ model using AIC for models fit to log landings data with catch during the spawning season $S_t$ added as a covariate. Data", Yr1, "to", Yr2, "were used.")
-fullcap=paste("Table ", ref("tabappA:nonspawner-model-time-d", pre="A"), ". ", thecap, sep="")
-kable(seltable, align="lccc", caption=fullcap, row.names=FALSE, escape=FALSE)
-```
 
