--- a/Table App A spawner model.Rmd
+++ b/Table App A spawner model.Rmd
@@ -37,7 +37,7 @@ m1 = lm(spawners0 ~ -1 + offset(spawners1), data=m5$model)
 i=1; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $ln(S_{t-1})$ + $\\epsilon$", 
+  Model="$ln(S_t)$ = $ln(S_{t-1})$ + $\\epsilon_t$", 
   Residual.df=round(aa[["df"]][2],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2="", 
